# gestione-corsi-its

./: README.md  run.py
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/api/routers/: exams.py  modules.py  students.py
backend/app/core/: __init__.py  db.py  settings.py
backend/app/models/: _base.py  exam.py  module.py  student.py
backend/app/scripts/: check_db.py  reset_collections.py  seeder.py
frontend/: angular.json  package.json  tsconfig.app.json  tsconfig.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.routes.ts  material.module.ts
frontend/src/app/dashboard/: dashboard.page.ts
frontend/src/app/exams/: exam-dialog.component.ts  exams-form.page.ts  exams.page.ts
frontend/src/app/modules/: module-dialog.component.ts  module-form.page.ts  modules.page.ts
frontend/src/app/shared/: api.interceptor.ts  api.service.ts  confirm-dialog.component.ts
frontend/src/app/students/: assign-module-dialog.component.ts  student-detail.page.ts  student-dialog.component.ts  student-form.page.ts  students.page.ts
src/: main.ts
